# myCppLearning

./: .gitignore  CMakeLists.txt  GraphTool.cpp  GraphTool.hpp  LICENSE  README.md  Rechner.cpp  Rechner.h  VectorCalc.cpp  VectorCalc.hpp  main.cpp  main.h
.github/workflows/: ci.yml
factory/: Auto.hpp  Fahrzeug.hpp  FahrzeugFactory.hpp  Lkw.hpp  Motorrad.hpp  mainFactory.cpp
tests/: test_graphtool.cpp  tests.cpp
